--- a/index.html
+++ b/index.html
@@ -1,57 +1,50 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<!DOCTYPE html>
+<html lang="en" ng-app="simbox">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ROBOSUB</title>
     <link rel="stylesheet" href="styles/main.css">
-</head>
-
-<body ng-app="simbox">
-    <!-- application content -->
-    <div class="container" ng-controller="AppCtrl">
-        <div robosub width="canvasWidth" trim="trim" speed="speed" depth="depth" height="canvasHeight" fillcontainer="dofillcontainer" scale="scale" material-type="materialType"></div>
-        <div id="inset"></div>
-    </div>
-    <!-- END CONTAINER -->
-    <script src="js/three.min.js"></script>
-    <script src="js/vendor/angular.min.js"></script>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/water-material.js"></script>
-
     <script src="js/vendor/socket.io.js"></script>
-
+    <script src="js/vendor/angular.min.js"></script>  
     <script src="js/vendor/socket.min.js"></script>
+    <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/ui-bootstrap.min.js"></script>
     <script src="js/vendor/gamepad.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-git2.js"></script> -->
+</head>
 
-    <script src="js/app.js"></script>
-    <script src="js/directives/robosub.js"></script>
-    <script src="js/vendor/FirstPersonControls.js"></script>
-    <script src="js/vendor/KeyboardState.js"></script>
-    <script src="js/vendor/CSS3DStereoRenderer.js"></script>
-    <script src="js/vendor/Mirror.js"></script>
-    <script src="js/vendor/Detector.js"></script>
-    <script src="js/vendor/stats.min.js"></script>
-    <script src="js/vendor/dat.gui.min.js"></script>
-    <script src="js/vendor/BrightnessContrastShader.js"></script>
-    <script src="js/vendor/CopyShader.js"></script>
-    <script src="js/vendor-mods/MTLLoader.js"></script>
-    <script src="js/vendor-mods/OBJMTLLoader.js"></script>
-    <script src="js/vendor/OBJLoader.js"></script>
-    <script src="js/vendor/ShaderPass.js"></script>
-    <script src="js/vendor/EffectComposer.js"></script>
-    <script src="js/vendor/RenderPass.js"></script>
-    <script src="js/vendor/StereoEffect.js"></script>
+<body ng-controller="AppCtrl">
+
+    <div class="container" ng-controller="AppCtrl">
+        <div robosub width="canvasWidth" roll="roll" trim="trim" speed="speed" pitch="pitch" depth="depth" height="canvasHeight" fillcontainer="dofillcontainer" scale="scale" material-type="materialType"></div>
+        <div id="inset"></div>
+    </div>
 </body>
+
+<script src="js/three.min.js"></script>
+ <script src="js/vendor/water-material.js"></script>
+<script src="js/vendor/FlyControls.js"></script>
+<script src="js/vendor/FirstPersonControls.js"></script>
+<script src="js/vendor/KeyboardState.js"></script>
+<script src="js/vendor/CSS3DStereoRenderer.js"></script>
+<script src="js/vendor/Mirror.js"></script>
+<script src="js/vendor/Detector.js"></script>
+<script src="js/vendor/stats.min.js"></script>
+<script src="js/vendor/dat.gui.min.js"></script>
+<script src="js/vendor/BrightnessContrastShader.js"></script>
+<script src="js/vendor/CopyShader.js"></script>
+<script src="js/vendor-mods/MTLLoader.js"></script>
+<script src="js/vendor-mods/OBJMTLLoader.js"></script>
+<script src="js/vendor/OBJLoader.js"></script>
+<script src="js/vendor/ShaderPass.js"></script>
+<script src="js/vendor/EffectComposer.js"></script>
+<script src="js/vendor/RenderPass.js"></script>
+<script src="js/vendor/StereoEffect.js"></script>
+<script src="js/app.js"></script>
+<script src="js/directives/robosub.js"></script>
 
 </html>
