--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ROBOSUB</title>
+
+    <!-- Load Wait First -->
+    <link rel="stylesheet" href="js/vendor/please-wait.css">
+    <script src="js/vendor/please-wait.js"></script>
     <link rel="stylesheet" href="styles/main.css">
     <script src="js/vendor/socket.io.js"></script>
     <script src="js/vendor/angular.min.js"></script>  
@@ -14,19 +18,21 @@
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/ui-bootstrap.min.js"></script>
     <script src="js/vendor/gamepad.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/directives/robosub.js"></script>
     <!-- <script src="http://code.jquery.com/jquery-git2.js"></script> -->
 </head>
 
 <body ng-controller="AppCtrl">
 
-    <div class="container" ng-controller="AppCtrl">
+    <div class="container">
         <div robosub width="canvasWidth" roll="roll" trim="trim" speed="speed" pitch="pitch" depth="depth" height="canvasHeight" fillcontainer="dofillcontainer" scale="scale" material-type="materialType"></div>
         <div id="inset"></div>
     </div>
 </body>
 
 <script src="js/three.min.js"></script>
- <script src="js/vendor/water-material.js"></script>
+<script src="js/vendor/water-material.js"></script>
 <script src="js/vendor/FlyControls.js"></script>
 <script src="js/vendor/FirstPersonControls.js"></script>
 <script src="js/vendor/KeyboardState.js"></script>
@@ -44,7 +50,5 @@
 <script src="js/vendor/EffectComposer.js"></script>
 <script src="js/vendor/RenderPass.js"></script>
 <script src="js/vendor/StereoEffect.js"></script>
-<script src="js/app.js"></script>
-<script src="js/directives/robosub.js"></script>
 
 </html>
